--- a/build.gradle
+++ b/build.gradle
@@ -57,13 +57,11 @@ dependencies {
 	// jstl
     implementation 'javax.servlet:jstl'
  	//file upload
- 	//implementation 'commons-io:commons-io:2.8.0'  /* Apache commons-io */
-	//implementation 'commons-fileupload:commons-fileupload:1.4' /* Apache Commons FileUpload */
  	implementation 'commons-io:commons-io:2.11.0'    /* Apache commons-io */
 	implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4' /* Apache Commons FileUpload */   
  
  	 //aws
- 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+ 	//implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 /*
 tasks.named('test') {
